update title slides

--- a/slides/aml-18-neural-networks/index.html
+++ b/slides/aml-18-neural-networks/index.html
@@ -15,13 +15,14 @@
 
 class: center, middle
 
-### W4995 Applied Machine Learning
+### Applied Machine Learning
 
 # Neural Networks
 
-04/20/20
+Presented by Martin Gubri
 
-Andreas C. Müller
+Slides by Andreas C. Müller available under CC-0 on [www.cs.columbia.edu/~amueller](https://www.cs.columbia.edu/~amueller/comsw4995s20/schedule/)
+
 ???
 The role of neural networks in ML has become increasingly
 important in recent years.
