--- a/slides/aml-20-advanced-nets/index.html
+++ b/slides/aml-20-advanced-nets/index.html
@@ -15,13 +15,13 @@
 
 class: center, middle
 
-### W4995 Applied Machine Learning
+### Applied Machine Learning
 
 # Advanced Neural Networks
 
-04/27/20
+Presented by Martin Gubri
 
-Andreas C. Müller
+Slides by Andreas C. Müller available under CC-0 on [www.cs.columbia.edu/~amueller](https://www.cs.columbia.edu/~amueller/comsw4995s20/schedule/)
 
 ???
 FIXME add model inspection?
