--- a/slides/aml-19-convolutional-nets/index.html
+++ b/slides/aml-19-convolutional-nets/index.html
@@ -15,13 +15,13 @@
 
 class: center, middle
 
-### W4995 Applied Machine Learning
+### Applied Machine Learning
 
 # Keras & Convolutional Neural Nets
 
-04/22/20
+Presented by Martin Gubri
 
-Andreas C. Müller
+Slides by Andreas C. Müller available under CC-0 on [www.cs.columbia.edu/~amueller](https://www.cs.columbia.edu/~amueller/comsw4995s20/schedule/)
 
 ???
 Say something about GPUs.
