minor update conv NN

--- a/slides/aml-19-convolutional-nets/index.html
+++ b/slides/aml-19-convolutional-nets/index.html
@@ -431,6 +431,8 @@ class:spacious
 
 - Weight sharing
 
+More details: ["But what is a convolution?" video](https://www.youtube.com/watch?v=KuXjwB4LzSA) by 3Blue1Brown
+
 ???
 FIXME figure with illustration
 
